      systems to retrieve monitoring information for this or other machines.
    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios
    * openvpn_clients: new check for OpenVPN connections
    * check_disk_smb: WATO formalization for active check check_disk_smb

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Valuespec: CascadingDropdown now able to process choice values from functions

1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined
    * FIX: check_mk_base: fixed rounding error in get_bytes_human_readable
    * New configuration variable contactgroup_members

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: mysql: fixed crash on computing IO information
    * FIX: diskstat: fix local variable 'ios_per_sec' referenced before assignment
    * FIX: multipath: ignore warning messages in agent due to invalid multipath.conf
    * FIX: megaraid_bbu: deal with broken output ("Adpater"), found in Open-E
    * FIX: megaraid_pdisk: deal with special output of Open-E
    * FIX: jolokia_metrics.mem: renamed parameter totalheap to total
    * FIX: megaraid_bbu: deal with broken output ("Adpater")
    * FIX: check_ldap: added missing host address (check didn't work at all)
    * FIX: check_ldap: added missing version option -2, -3, -3 -T (TLS)
    * Linux agent: limit netstat to 10 seconds
    * ps: Allow %1, %2, .. instead of %s in process_inventory. That allows