@@ -43,7 +43,9 @@ enum LogEntryType {	NONE,
 					DOWNTIME_ALERT_HOST,
 					DOWNTIME_ALERT_SERVICE,
 					STATE_HOST,
+					STATE_HOST_INITIAL,
 					STATE_SERVICE,
+					STATE_SERVICE_INITIAL,
 					FLAPPING_HOST,
 					FLAPPING_SERVICE,
 					TIMEPERIOD_TRANSITION,
